# NumbahWan-tcg

./: .ai-context.md  .ai-files-auto.txt  .ai-files.txt  .ai-recent.md  .ai-snippets.md  .context.md  .gitignore  .metadata-stripped.json  .nw-config.json  .nw-context  .nw-eval-history.json  .nw-eval-result.json  .nw-fixer-log.json  .nw-session  .pinforge-weight.json  AGENT-CONTEXT.md  AGENTS.md  AI-HELPERS.md  AI-README.md  AI_CONTEXT.json  AI_CONTEXT.md  AI_PLAYBOOK.md  ARCHITECTURE.md  AUDIT-2026-04.md  BUILD-DOCTRINE.md  CARD-SYSTEM.md  CARD_MASTER_DATA.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPROVEMENT-LOG.md  LEARNING-SYSTEMS-AUDIT.md  LEARNINGS.md  LICENSE  PCP-SPEC.md  PROJECT.md  README.md  SECURITY.md  SHORTHAND.md  STRATEGIC-LEARNINGS.md  (+37 more)
.github/: pull_request_template.md
.husky/: post-commit  post-merge  pre-commit
.mycelium/: build-budget-history.json  checkpoint.json  config.json  eval-history.json  eval.json  events.jsonl  factory-memory.json  fix-log.json  freshness-run.json  learning-run.json  memory.json  observer-run.json  smoke-report.json  trends.json  tsc-results.json  watch.json
.mycelium-mined/: auto-mine-state.json  blame-links.json  health-status  page-weights.json  pr-data.json  quality-report.json  validation-report.json  webapp-dev-intelligence.json  webapp-enriched.json  webapp-extracted.json  webapp-patterns.json  webapp-precommit-rules.json  webapp-risk-intelligence.json  webapp-rules.md
archive/: test-render.html
docs/: .context.md  AI-AVATAR-WORKFLOW.md  AI-HANDOFF.md  AI-HELPERS.md  AI-ONBOARDING.md  AI-README.md  AI-WORKFLOWS.md  AI_CONTEXT.md  API-ROUTES.md  ARCHITECTURE.md  ART_QUEUE.md  CARD-FACTORY.md  CARD_BIBLE.md  DATA-MODELS.md  EMBASSY-API.md  I18N_AUDIT_REPORT.md  IMAGE-OPTIMIZATION.md  INDEX.md  LESSONS_LEARNED_2026-02-03.md  MODULE-MAP.md  PAGES-MAP.md  PHYSICAL-CARD-PRODUCTION.md  PHYSICAL_CARD_SET_STRATEGY.md  PRINTER-ORDER-SPEC.md  SPEC.md  UI-STANDARDS.md  cinematic-pipeline.md
doctrine/: LESSONS.jsonl  PATTERNS.md  README.md  REJECTIONS.md  VOICE.md
memory/: memory-ops.py  qqb-memory.json
migrations/: .context.md  0001_initial_schema.sql  0002_wallet_system.sql  (+4 more)
nwge-engine/: .context.md  Cargo.toml
nwge-engine/crates/nwge-ai/: Cargo.toml
nwge-engine/crates/nwge-ai/src/: genre_templates.rs  lib.rs  prompt.rs  schema_ref.rs  token_cost.rs  validator.rs
nwge-engine/crates/nwge-audio/: Cargo.toml
nwge-engine/crates/nwge-audio/src/: lib.rs
nwge-engine/crates/nwge-core/: Cargo.toml
nwge-engine/crates/nwge-core/src/: ecs.rs  event.rs  lib.rs  math.rs  time.rs  transform.rs
nwge-engine/crates/nwge-data/: Cargo.toml
nwge-engine/crates/nwge-data/src/: entity_def.rs  game_def.rs  item_def.rs  lib.rs  loader.rs  scene_def.rs  system_def.rs
nwge-engine/crates/nwge-input/: Cargo.toml
nwge-engine/crates/nwge-input/src/: lib.rs
nwge-engine/crates/nwge-physics/: Cargo.toml
nwge-engine/crates/nwge-physics/src/: lib.rs
nwge-engine/crates/nwge-render/: Cargo.toml
nwge-engine/crates/nwge-render/src/: camera.rs  color.rs  framebuffer.rs  lib.rs  particles.rs  sprite.rs  text.rs  tilemap.rs
nwge-engine/crates/nwge-render3d/: Cargo.toml
nwge-engine/crates/nwge-render3d/src/: camera.rs  lib.rs  light.rs  material.rs  math3d.rs  mesh.rs  pipeline.rs  rasterizer.rs  scene.rs
nwge-engine/crates/nwge-runner/: Cargo.toml
nwge-engine/crates/nwge-runner/src/: main.rs
nwge-engine/crates/nwge-script/: Cargo.toml
nwge-engine/crates/nwge-script/src/: lib.rs
nwge-engine/games/example-farm/: game.yaml
(+1681 files in other folders)
