[workspace]
resolver = "2"
members = [
    "crates/nwge-core",
    "crates/nwge-render",
    "crates/nwge-render3d",
    "crates/nwge-physics",
    "crates/nwge-audio",
    "crates/nwge-input",
    "crates/nwge-script",
    "crates/nwge-ai",
    "crates/nwge-data",
    "crates/nwge-runner",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["NumbahWan Team"]
description = "AI-native game engine — data-driven, cost-efficient game creation"

[workspace.dependencies]
# Serialization (AI generates YAML/JSON → engine loads)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# ECS
hecs = "0.10"

# Math
glam = { version = "0.29", features = ["serde"] }

# Windowing + Input
winit = "0.30"

# Rendering — CPU software renderer (works everywhere, perfect for pixel art)
# wgpu planned for GPU acceleration later
softbuffer = "0.4"

# Physics
rapier2d = { version = "0.22", features = ["serde-serialize"] }

# Audio
rodio = "0.20"

# Scripting
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize"] }

# Async
pollster = "0.4"
tokio = { version = "1", features = ["rt", "macros"] }

# Image loading
image = "0.25"

# Logging
log = "0.4"
env_logger = "0.11"

# Random
fastrand = "2"

# Time
instant = "0.1"

# File watching (hot reload)
notify = "7"

# UUID for entity IDs
uuid = { version = "1", features = ["v4", "serde"] }
