[package]
name = "nwge-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
hecs = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
fastrand = { workspace = true }
uuid = { workspace = true }
