[package]
name = "nwge-render"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
glam = { workspace = true }
image = { workspace = true }
fastrand = { workspace = true }
nwge-core = { path = "../nwge-core" }
nwge-data = { path = "../nwge-data" }
