[package]
name = "nwge-render3d"
version.workspace = true
edition.workspace = true
description = "3D rendering pipeline — software rasterizer with PBR lighting, post-processing"

[[bin]]
name = "nwge-3d-demo"
path = "src/bin/demo.rs"

[dependencies]
glam = { workspace = true }
image = { workspace = true }
log = { workspace = true }
fastrand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
