[package]
name = "nwge-runner"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nwge"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
glam = { workspace = true }
hecs = { workspace = true }
fastrand = { workspace = true }
image = { workspace = true }

nwge-core = { path = "../nwge-core" }
nwge-data = { path = "../nwge-data" }
nwge-render = { path = "../nwge-render" }
nwge-render3d = { path = "../nwge-render3d" }
nwge-ai = { path = "../nwge-ai" }
nwge-input = { path = "../nwge-input" }
nwge-physics = { path = "../nwge-physics" }
